# openxr_streamout_layer

./: .gitmodules  CMakeLists.txt  README.md  XrApiLayer_streamout.json.in
include/: common.h  compatibility.h  simulatedLayer.h
src/: api_layer_streamout.cpp  simulatedLayer.cpp
